# agentic-patterns

./: README.md  main.py  pyproject.toml  reflection_pattern.ipynb  requirements.txt  tool_pattern.ipynb
