[project]
name = "agentic-patters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentic-patterns>=1.0.0",
    "groq<=0.10.0",
    "ipykernel>=6.29.5",
    "langchain-groq>=0.3.3",
    "openai>=1.93.0",
    "openai-agents>=0.1.0",
    "python-dotenv>=1.1.1",
]
